Assistant checkpoint: Fix Chrome input click issue with z-index
Assistant generated file changes:
- assets/styles/style.css: Fix form input click issue by adjusting z-index stacking, Fix form input click issue by adjusting z-index stacking

---

User prompt:

The problem I'm running into only happens when the screen is so wide that "/images/news-background.png" overlaps the input fields.  Does that make sense?

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -380,6 +380,7 @@ background-color: transparent;
 	position: absolute;
 	top: 0;
 	width: 100%;
+	z-index: 0;
 }
 .news-letter .news-star img{
 	width: 175px;
@@ -407,6 +408,8 @@ background-color: transparent;
 	/*display: flex;*/
 	/*gap: 29px;*/
 	margin-top: 60px;
+	position: relative;
+	z-index: 1;
 }
 .form-fields {
 	display: flex;
